# LeakSnipe

./: .env.example  .env.template  .gitignore  AGENTS.md  Install-Sidecar.bat  Launch-LeakSnipe.bat  Launch-Python-Hud.bat  LaunchPokerTracker.bat  PokerTracker.spec  README.md  REFACTORING_SUMMARY.md  Start-Sidecar.bat  ai_processor.py  analysis.py  coach_memory.py  config.py  dataset_context.py  equity.py  importing.py  merge_dbs.py  models.py  parsers.py  poker_gui.py  poker_ocr_bridge.ps1  pot_odds.py  settings.json  setup.cfg  utils.py  web_context.py
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
PokerBuild/: BUILD.bat  build.sh  build_script.bat  build_script.ps1
PokerBuild/poker-trainer/: BUILD-EXE.bat  build_current_output.txt  build_exe.ps1  build_installer.ps1  build_output.txt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: THEORY.md  index.html
hooks/: hook-PIL.Image.py
leak-snipe-desktop/: README.md  package-lock.json  package.json
leak-snipe-desktop/backend/: main.py  paths.py  serializers.py
leak-snipe-desktop/src/: App.tsx  index.css
leak-snipe-desktop/src-tauri/: Cargo.toml  tauri.conf.json
leaksnipe-ui/: README.md  hud.html  index.html  package-lock.json  package.json  vite.config.ts
leaksnipe-ui/src-tauri/: Cargo.toml  (+1 more)
scripts/: install-sidecar.ps1  python-env.ps1  start-python-hud.ps1  start-sidecar.ps1  tauri-dev.ps1
sidecar/: api.py  paths.py  requirements.txt  serializers.py  server.py
tests/: verify_low_ranking.py
theory/: __init__.py  cfr_solver.py  charts.py  value_net.py
(+48 files in other folders)
