[metadata]
name = leaksnipe
version = 0.1.0
author = Your Name
author_email = you@example.com
description = Multi-site poker hand tracker with AI-assisted analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

install_requires =
    customtkinter>=5.0
    pillow>=9.0
    matplotlib>=3.5
    numpy>=1.21
    openai>=1.0
    anthropic>=0.3.0

[options.extras_require]
dev =
    black>=23.0
    flake8>=6.0
    pytest>=7.0

[options.entry_points]
console_scripts =
    leaksnipe = poker_gui:main
